--- a/ch01/03-camera.html
+++ b/ch01/03-camera.html
@@ -171,18 +171,19 @@
                         <h1 id="see-through-a-camera"><a class="header" href="#see-through-a-camera">See through a camera</a></h1>
 <ul>
 <li>
-<p>We are now already seeing the 3D game world in the window, through a <em>camera</em></p>
+<p>We are now already seeing the 3D game world in the window, through a <em>camera</em>.</p>
 </li>
 <li>
 <p>The mechanism of a camera:</p>
 <ul>
-<li>Without a camera, the world is just a bunch of data describing what everything is and where they are.</li>
-<li>A camera uses such information to calculate what we should see from a certain point of view.</li>
-<li>Specifically, given object shapes, positions, environment lightings, etc., the camera will compute colors of each pixels on the screen, as if we were seeing things directly from there; this process is called <em>rendering</em>.</li>
+<li>Without a camera, the game world is just a bunch of data describing what everything is and where they are.</li>
+<li>A camera uses such information to compute what we should see from a certain point of view, as if we put a real camera in there.</li>
+<li>Specifically, given all the information of object shapes, positions, environment lightings, etc., the camera will compute colors of each pixels on the screen, as if we were seeing things directly from there.</li>
+<li>This process is called <em>rendering</em>, which is one of the most important concept of game engine.</li>
 </ul>
 </li>
 <li>
-<p>Let's move our camera to a more comfortable position.</p>
+<p>The default position of the camera is now pointing at the legs of the fox. Let's first move our camera to a more comfortable position.</p>
 <ul>
 <li>In game engines, we often use the term <em>transform</em> to represent the position, rotation (or orientation), and scale (or size) of an object.</li>
 <li>If we want to move our camera to a different position and orientation, we need to define the <code>Transform</code> component on creating the <code>Camera3DBundle</code>:
@@ -203,15 +204,15 @@
 <img src="https://bevy-cheatbook.github.io/img/handedness.png" alt="coordinates" /></li>
 <li>The method <code>looking_at</code> is a convenient way of defining a camera rotation. It takes two arguments:
 <ul>
-<li>The first argument <code>target</code>, is the position that you want your camera to point at (hence you may not want to set it to the same position with the camera itself).</li>
-<li>The second argument <code>up</code>, is used to define the up direction of the camera. Most of the time we want a horizontal view of the world, so we set the up direction to <code>Vec3::Y</code>, i.e. the <em>up</em> direction of the same coordinate system.</li>
+<li>The first argument <code>target</code>, is the 3D coordinates of the position that you want your camera to point at.</li>
+<li>The second argument <code>up</code>, is used to define the up direction of the camera. Most of the time we want a horizontal view of the world, so we set the up direction to <code>Vec3::Y</code>, i.e. the default <em>up</em> direction of the coordinate system.</li>
 <li>You may notice that the <code>up</code> direction isn't perfectly orthogonal with the target direction. This is allowed, as Bevy will calculate the internal representation of the rotation (a quaternion or <code>Quat</code> representing an orientation) based on the plane formed by the two vectors.</li>
 </ul>
 </li>
-<li>As a practice, we describe this scene in terms of coordinates:
+<li>As a practice, let's describe this scene in terms of coordinates:
 <ul>
 <li>The fox is placed at the original, standing on the X-Z plane, facing +Z direction.</li>
-<li>The camera is placed at the front-left of the fox, slightly higher, watching the fox (the eyesight drops on the fox body, a little higher than the original), keeping a horizontal view by using +Y as up direction.</li>
+<li>The camera is placed at the front-left of the fox, slightly higher, watching the fox (the eyesight drops on the body of the fox, a little higher than the origin), keeping a horizontal view by using +Y as up direction.</li>
 </ul>
 </li>
 <li>The scene looks like this:
@@ -219,13 +220,29 @@
 </ul>
 </li>
 <li>
-<p>Then, we add some lights to make this scene look more natural [TODO]</p>
+<p>The fox still looks very dark. This is because there is no light in this scene. To make this scene look more natural and vivid, we add a directional light to it.</p>
 <ul>
-<li>https://github.com/bevyengine/bevy/blob/main/examples/3d/load_gltf.rs</li>
+<li>Think of directional light as sunlight. It all comes from a single direction.</li>
+<li>Here in <code>setup</code>, we add a default directional light (still through <code>commands.spawn</code>). The default light points at -Z direction, lightening the front side of the fox.</li>
 </ul>
 </li>
 <li>
-<p>Also change background color to give us a more lively feel [TODO]</p>
+<p>We can also apply some global settings to give this scene a more lively feel:</p>
+<ul>
+<li>Global settings are often defined as resources, as only one instance of a resource is allowed in the game world.</li>
+<li>We first set background color to green, to give us a feeling of grass. This is done by inserting <code>ClearColor</code> resource.</li>
+<li>We also set up an ambient light to soften the picture, by inserting the <code>AmbientLight</code> resource.</li>
+</ul>
+<pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
+</span><span class="boring">fn main() {
+</span>App::new()
+    .insert_resource(ClearColor(Color::rgb(0.4, 0.7, 0.4)))
+    .insert_resource(AmbientLight {
+        color: Color::WHITE,
+        brightness: 0.2,
+    })
+    // ...
+<span class="boring">}</span></code></pre></pre>
 </li>
 <li>
 <p>The final scene looks like this:
